# MeshDenoiser

./: .gitignore  CMakeLists.txt  imgui.ini
include/: Common.h
include/glad/: glad.h
include/slog/: slog.h
res/shaders/: basic.glsl  terrain.glsl
src/: App.cpp  App.h  MeshProcessor.cpp  MeshProcessor.h  Model.cpp  Model.h  main.cpp
